k8s_prod/deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: edu-furious-nobel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: postnikov2017/django_app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 8080
